<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/main_background"
    android:fitsSystemWindows="true"
    android:id="@+id/constraintLayout"
    android:layout_height="match_parent"
    tools:context=".ui.AddExpenseOrDebts">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/projectName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginEnd="48dp"
                android:text="@string/projectName"
                android:textColor="@color/white"
                android:textSize="25dp" />

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/layout_design_white"
                android:clickable="false"
                android:cursorVisible="false"
                android:elevation="10dp"
                android:focusable="false"
                android:focusableInTouchMode="false"

                android:hint="@string/traderName"
                android:inputType="text"
                android:padding="13dp"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/desc"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/layout_design_white"
                android:elevation="10dp"
                android:gravity="right"
                android:hint="@string/description"
                android:inputType="textMultiLine"
                android:maxLines="3"
                android:padding="13dp"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/layout_design_white"
                android:elevation="10dp"
                android:gravity="right"
                android:hint="@string/value"
                android:inputType="number"
                android:padding="13dp"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/payed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/layout_design_white"
                android:elevation="10dp"
                android:hint="@string/payed"
                android:gravity="right"
                android:inputType="number"
                android:padding="13dp"
                android:textSize="20dp" />

            <Button
                android:id="@+id/bu_Add_e_w_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="40dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/layout_design_white_green"
                android:elevation="10dp"
                android:padding="5dp"
                android:text="@string/save"
                android:textSize="25dp" />
        </LinearLayout>

    </ScrollView>

    <FrameLayout
        android:id="@+id/fragmentContainer"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />
</androidx.constraintlayout.widget.ConstraintLayout>