<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/layout_design_white_border"
    android:layout_marginRight="10dp"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="5dp"
    android:id="@+id/thirdLayout"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:elevation="0px"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:elevation="0px"
            android:orientation="vertical">

            <TextView
                android:id="@+id/t_Name"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingRight="15dp"
                android:gravity="center"
                android:text="@string/traderName"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/t_disc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:padding="10dp"
                android:fontFamily="@font/agencyfb_reg"
                android:paddingRight="15dp"
                android:text="@string/description"
                android:textSize="15dp" />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/blue"/>
        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_balance"
                android:layout_width="0px"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/debts_"
                android:textColor="@color/black"
                android:textSize="10dp" />
            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:background="@color/blue"/>

            <TextView
                android:layout_width="0px"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/payed"
                android:textColor="@color/black"
                android:textSize="10dp" />

            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:background="@color/blue"/>
            <TextView
                android:layout_width="0px"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:backgroundTint="@color/red"
                android:text="@string/totalPrice"
                android:textColor="@color/black"
                android:textSize="10dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginBottom="3dp"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/t_debts"
                android:layout_width="0px"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:background="@drawable/layout_design_blue_bottom_raduis"
                android:gravity="center"
                android:backgroundTint="@color/red"
                android:padding="3dp"
                android:text="@string/debts_"
                android:textColor="@color/white"
                android:textSize="15dp" />
            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:background="@color/blue"/>
            <TextView
                android:id="@+id/t_payed"
                android:layout_width="0px"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:background="@color/whiteGreen"
                android:gravity="center"
                android:padding="3dp"
                android:text="@string/payed"
                android:textColor="@color/black"
                android:textSize="15dp" />

            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:background="@color/blue"/>
            <TextView
                android:id="@+id/t_value"
                android:layout_width="0px"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:background="@drawable/layout_design_blue_top_raduis"
                android:gravity="center"
                android:padding="3dp"
                android:text="@string/value"
                android:textColor="@color/white"
                android:textSize="15dp" />

        </LinearLayout>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>